gitops/manifests/app/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: amq-broker
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: activemq-artemis
          image: registry.redhat.io/amq7/amq-broker-rhel8:7.11.7-4.1740580601
          volumeMounts:
            - name: broker-storage
              mountPath: /opt/amq/data/
            - name: broker-auth-config
              mountPath: /opt/amq/auth/
              subPath: login.config
