gitops/manifests/app/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: amq-broker
  labels:
    app: amq-broker
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
